# lambda-runtime-types

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
examples/: test_multi_exec.rs  test_postgres_rotation.rs  test_timeout.rs
src/: lib.rs
src/rotate/: aws_sdk.rs  mod.rs  rusoto.rs  smc.rs
tests/: basic.json  basic.rs  rotate.json  rotate.rs  shared_data.json  shared_data.rs
tests/manual/: .gitignore  build.sh
tests/manual/test_multi_exec/: 0-input.tf  1-iam.tf  1-lambda.tf  2-lambda.tf  test.sh
tests/manual/test_postgres_rotation/: 0-input.tf  1-vpc.tf  2-rds.tf  3-secret.tf  4-rotation-iam.tf  5-rotation.tf  test.sh
tests/manual/test_timeout/: 0-input.tf  1-iam.tf  2-lambda.tf  test.sh
