[package]
name = "lambda-runtime-types"
version = "0.1.1"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Common structures for lambda architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mettke/lambda_runtime_types"
readme = "./README.md"
keywords = ["lambda", "types"]
categories = ["data-structures"]
resolver = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
rotate = ["rusoto_core", "rusoto_secretsmanager", "serde_json"]
test = ["serde_json"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
lambda_runtime = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.10"

rusoto_core = { version = "0.47", optional = true }
rusoto_secretsmanager = { version = "0.47", optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
native-tls = "0.2"
postgres-native-tls = "0.5"
simple_logger = "1.13"
serde_json = "1.0"
tokio-postgres = "0.7"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[[example]]
name = "test_postgres_rotation"
required-features = ["rotate"]
