[package]
name = "lambda-runtime-types"
version = "0.6.11"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2021"
description = "Common structures for lambda architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/itmettkeDE/lambda-runtime-types"
readme = "./README.md"
keywords = ["lambda", "types"]
categories = ["data-structures"]
resolver = "2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["rotate_with_preserve"]
rotate_aws_sdk = ["aws-config", "aws-sdk-secretsmanager", "_rotate"]
rotate_rusoto = ["rusoto_core", "rusoto_secretsmanager", "_rotate"]
rotate_with_preserve = []
test = ["serde_json"]

# Do not use directly
_rotate = ["serde_json"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
lambda_runtime = "0.7"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = "1"

aws-config = { version = "0.51", features = ["rustls"], optional = true }
aws-sdk-secretsmanager = { version = "0.21", features = ["rustls"], optional = true }
rusoto_core = { version = "0.48", default-features = false, features = ["rustls"], optional = true }
rusoto_secretsmanager = { version = "0.48", default-features = false, features = ["rustls"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
native-tls = "0.2"
postgres-native-tls = "0.5"
simple_logger = "2"
tokio-postgres = "0.7"

[[example]]
name = "test_postgres_rotation"
required-features = ["rotate_rusoto"]
